--- a/java-backend-pwr/index.html
+++ b/java-backend-pwr/index.html
@@ -61,7 +61,7 @@
 					<section>
 						<h2>Wykorzystane narzędzia</h2>
 						<ul>
-							<li class="fragment fade-up">Java 8</li>
+							<li class="fragment fade-up">Java 8, jUnit, Mockito</li>
 							<li class="fragment fade-up">jHipster</li>
 							<li class="fragment fade-up">Mapstruct</li>
 							<li class="fragment fade-up">Gradle (+Groovy)</li>
