Replace email with image

--- a/java-backend-pwr/index.html
+++ b/java-backend-pwr/index.html
@@ -410,10 +410,7 @@ public interface TriggerMapper {
 
 					<h3>Jesteśmy do dyspozycji. Pytania zbierane będą przez tydzień, a do najciekawszych pytań opublikujemy odpowiedzi. </h3>
 
-					<div style="padding-left: 200px;">
-						<div><a href="mailto:agurgulj@pgs-soft.com">agurgul@pgs-soft.com</a></div>
-						<div><a href="mailto:jmadej@pgs-soft.com">jmadej@pgs-soft.com</a></div>
-					</div>
+					<img style="border: none;" src="examples/majlos.png">
 
 					<aside class="notes">
 					</aside>
