mapstruct-refactorings update slides

--- a/mapstruct-refactorings/index.html
+++ b/mapstruct-refactorings/index.html
@@ -142,7 +142,7 @@ public interface MySimpleMapper {
 				<section>
 
 					<section>
-						<h2>Code-review - przykład</h2>
+						<h2>Code-review - the java way</h2>
 						<pre><code>
 @@ -27,33 +24,15 @@ public abstract class StoreMapper {
 
@@ -166,7 +166,7 @@ public interface MySimpleMapper {
 					</section>
 
 					<section>
-						<h2>Generowany kod a code-review (1/2)</h2>
+						<h2>Code-review - the mapstruct way (1/2)</h2>
 						<pre><code>
 public abstract class TriggerMapper {
 
@@ -186,7 +186,7 @@ public abstract class TriggerMapper {
 					</section>
 
 					<section>
-						<h2>Generowany kod a code-review (2/2)</h2>
+						<h2>Code-review - the mapstruct way (2/2)</h2>
 						<pre><code>
 @Mapper(componentModel = "spring", uses = {TriggerGroupMapper.class})
 public interface TriggerMapper {
