mapstruct-refactorings add mapstruct way

--- a/mapstruct-refactorings/index.html
+++ b/mapstruct-refactorings/index.html
@@ -53,19 +53,19 @@
 				<section>
 					<h2>Agenda</h2>
 					<ul>
+						<li class="fragment grow">Co to jest mapstruct?</li>
 						<li class="fragment grow">MapStruct processor options</li>
+						<li class="fragment grow">code-review - java way</li>
+						<li class="fragment grow">code-review - mapstruct way</li>
+						<li class="fragment grow">code-review - spring way?</li>
+
 						<li class="fragment grow"></li>
 						<li class="fragment grow"></li>
-						<li class="fragment grow"></li>
-						<li class="fragment grow"></li>
-						<li class="fragment grow"></li>
-						<li class="fragment grow">code-review w generowanym kodzie</li>
 						<li class="fragment grow">iterable/noniterable</li>
 					</ul>
 				</section>
 
 				<section>
-
 					<section>
 						<h2>Przykład - Mapstruct (2/2)</h2>
 						<pre><code>
@@ -111,6 +111,9 @@ public interface RowMapper {
 </code></pre>
 					</section>
 
+				</section>
+
+				<section>
 					<section>
 						<h2>MapStruct processor options</h2>
 						<pre><code>@Mapper(componentModel = "spring")
@@ -164,6 +167,9 @@ public interface MySimpleMapper {
      }
 </code></pre>
 					</section>
+				</section>
+
+				<section>
 
 					<section>
 						<h2>Code-review - the mapstruct way (1/2)</h2>
@@ -203,11 +209,13 @@ public interface TriggerMapper {
 				</section>
 
 				<section>
-					<h2></h2>
+					<section>
+						<h2>Code-review - spring way?</h2>
 
 
-					<aside class="notes">
-					</aside>
+						<aside class="notes">
+						</aside>
+					</section>
 				</section>
 
 				<section data-background="img/pgssoftware-logo-variants/pgssoftware-logo.svg" data-background-repeat="no-repeat" data-background-size="600px" data-background-position="left bottom">
