Update date of presentation

--- a/mapstruct-refactorings/index.html
+++ b/mapstruct-refactorings/index.html
@@ -33,7 +33,7 @@
     pointer-events: none;"src="img/mapstruct.png">
 					<h2 style="color: #1b91ff">Czyli o code-review dla wygenerowanego kodu</h2>
 					<p>
-						<small><a href="https://www.pgs-soft.com/">PGS Software</a> Jakub Madej. 29 czerwca 2017.</small>
+						<small><a href="https://www.pgs-soft.com/">PGS Software</a> Jakub Madej. 19 lipca 2017.</small>
 					</p>
 				</section>
 
@@ -306,7 +306,8 @@ public abstract class TreeMapper {
 				<section data-background="img/pgssoftware-logo-variants/pgssoftware-logo.svg" data-background-repeat="no-repeat" data-background-size="600px" data-background-position="left bottom">
 					<h2>Pytania?</h2>
 
-					<h4><a href="http://jmayday.github.io/mapstruct-refactorings/">http://jmayday.github.io/mapstruct-refactorings/</a></h4>
+					<h4>Prezentacja: <a href="http://jmayday.github.io/mapstruct-refactorings/">http://jmayday.github.io/mapstruct-refactorings/</a></h4>
+					<h6>Kod: <a href="https://github.com/jmayday/jmayday.github.io/tree/master/mapstruct-refactorings/examples/initial">https://github.com/jmayday/jmayday.github.io/tree/master/mapstruct-refactorings/examples/initial</a></h6>
 
 
 					<aside class="notes">
